load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/bz",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "bz",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "bz_lib",
    crate_name = "bz",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//app/bz_action_impl:bz_action_impl",
        "//app/bz_analysis:bz_analysis",
        "//app/bz_anon_target:bz_anon_target",
        "//app/bz_build_api:bz_build_api",
        "//app/bz_build_info:bz_build_info",
        "//app/bz_build_signals:bz_build_signals",
        "//app/bz_build_signals_impl:bz_build_signals_impl",
        "//app/bz_bxl:bz_bxl",
        "//app/bz_certs:bz_certs",
        "//app/bz_cfg_constructor:bz_cfg_constructor",
        "//app/bz_client:bz_client",
        "//app/bz_client_ctx:bz_client_ctx",
        "//app/bz_cmd_audit_client:bz_cmd_audit_client",
        "//app/bz_cmd_audit_server:bz_cmd_audit_server",
        "//app/bz_cmd_completion_client:bz_cmd_completion_client",
        "//app/bz_cmd_debug_client:bz_cmd_debug_client",
        "//app/bz_cmd_docs_client:bz_cmd_docs_client",
        "//app/bz_cmd_docs_server:bz_cmd_docs_server",
        "//app/bz_cmd_log_client:bz_cmd_log_client",
        "//app/bz_cmd_query_server:bz_cmd_query_server",
        "//app/bz_cmd_rage_client:bz_cmd_rage_client",
        "//app/bz_cmd_starlark_client:bz_cmd_starlark_client",
        "//app/bz_cmd_starlark_server:bz_cmd_starlark_server",
        "//app/bz_cmd_targets_server:bz_cmd_targets_server",
        "//app/bz_common:bz_common",
        "//app/bz_configured:bz_configured",
        "//app/bz_core:bz_core",
        "//app/bz_daemon:bz_daemon",
        "//app/bz_data:bz_data",
        "//app/bz_error:bz_error",
        "//app/bz_event_log:bz_event_log",
        "//app/bz_event_observer:bz_event_observer",
        "//app/bz_events:bz_events",
        "//app/bz_external_cells:bz_external_cells",
        "//app/bz_forkserver:bz_forkserver",
        "//app/bz_fs:bz_fs",
        "//app/bz_interpreter_for_build:bz_interpreter_for_build",
        "//app/bz_query_impls:bz_query_impls",
        "//app/bz_server:bz_server",
        "//app/bz_server_commands:bz_server_commands",
        "//app/bz_test:bz_test",
        "//app/bz_test_runner:bz_test_runner",
        "//app/bz_transition:bz_transition",
        "//app/bz_util:bz_util",
        "//app/bz_validation:bz_validation",
        "//app/bz_wrapper_common:bz_wrapper_common",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//host_sharing:host_sharing",
        "//shed/bz_hash:bz_hash",
        "//superconsole:superconsole",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)

rust_binary(
    name = "bz",
    crate_name = "bz",
    crate_root = "bin/bz.rs",
    srcs = ["bin/bz.rs"],
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        ":bz_lib",
        "//app/bz_action_impl:bz_action_impl",
        "//app/bz_analysis:bz_analysis",
        "//app/bz_anon_target:bz_anon_target",
        "//app/bz_build_api:bz_build_api",
        "//app/bz_build_info:bz_build_info",
        "//app/bz_build_signals:bz_build_signals",
        "//app/bz_build_signals_impl:bz_build_signals_impl",
        "//app/bz_bxl:bz_bxl",
        "//app/bz_certs:bz_certs",
        "//app/bz_cfg_constructor:bz_cfg_constructor",
        "//app/bz_client:bz_client",
        "//app/bz_client_ctx:bz_client_ctx",
        "//app/bz_cmd_audit_client:bz_cmd_audit_client",
        "//app/bz_cmd_audit_server:bz_cmd_audit_server",
        "//app/bz_cmd_completion_client:bz_cmd_completion_client",
        "//app/bz_cmd_debug_client:bz_cmd_debug_client",
        "//app/bz_cmd_docs_client:bz_cmd_docs_client",
        "//app/bz_cmd_docs_server:bz_cmd_docs_server",
        "//app/bz_cmd_log_client:bz_cmd_log_client",
        "//app/bz_cmd_query_server:bz_cmd_query_server",
        "//app/bz_cmd_rage_client:bz_cmd_rage_client",
        "//app/bz_cmd_starlark_client:bz_cmd_starlark_client",
        "//app/bz_cmd_starlark_server:bz_cmd_starlark_server",
        "//app/bz_cmd_targets_server:bz_cmd_targets_server",
        "//app/bz_common:bz_common",
        "//app/bz_configured:bz_configured",
        "//app/bz_core:bz_core",
        "//app/bz_daemon:bz_daemon",
        "//app/bz_data:bz_data",
        "//app/bz_error:bz_error",
        "//app/bz_event_log:bz_event_log",
        "//app/bz_event_observer:bz_event_observer",
        "//app/bz_events:bz_events",
        "//app/bz_external_cells:bz_external_cells",
        "//app/bz_forkserver:bz_forkserver",
        "//app/bz_fs:bz_fs",
        "//app/bz_interpreter_for_build:bz_interpreter_for_build",
        "//app/bz_query_impls:bz_query_impls",
        "//app/bz_server:bz_server",
        "//app/bz_server_commands:bz_server_commands",
        "//app/bz_test:bz_test",
        "//app/bz_test_runner:bz_test_runner",
        "//app/bz_transition:bz_transition",
        "//app/bz_util:bz_util",
        "//app/bz_validation:bz_validation",
        "//app/bz_wrapper_common:bz_wrapper_common",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//host_sharing:host_sharing",
        "//shed/bz_hash:bz_hash",
        "//superconsole:superconsole",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
