[package]
description = ""
edition = "2024"
license = { workspace = true }
name = "bz"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
backtrace = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
fbinit = { workspace = true }
hex = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

dupe = { workspace = true }
gazebo = { workspace = true }
host_sharing = { workspace = true }
superconsole = { version = "0.2.0", path = "../../superconsole" }

bz_action_impl = { workspace = true }
bz_analysis = { workspace = true }
bz_anon_target = { workspace = true }
bz_build_api = { workspace = true }
bz_build_info = { workspace = true }
bz_build_signals = { workspace = true }
bz_build_signals_impl = { workspace = true }
bz_bxl = { workspace = true }
bz_certs = { workspace = true }
bz_cfg_constructor = { workspace = true }
bz_client = { workspace = true }
bz_client_ctx = { workspace = true }
bz_cmd_audit_client = { workspace = true }
bz_cmd_audit_server = { workspace = true }
bz_cmd_completion_client = { workspace = true }
bz_cmd_debug_client = { workspace = true }
bz_cmd_docs_client = { workspace = true }
bz_cmd_docs_server = { workspace = true }
bz_cmd_log_client = { workspace = true }
bz_cmd_query_server = { workspace = true }
bz_cmd_rage_client = { workspace = true }
bz_cmd_starlark_client = { workspace = true }
bz_cmd_starlark_server = { workspace = true }
bz_cmd_targets_server = { workspace = true }
bz_common = { workspace = true }
bz_configured = { workspace = true }
bz_core = { workspace = true }
bz_daemon = { workspace = true }
bz_data = { workspace = true }
bz_error = { workspace = true }
bz_event_log = { workspace = true }
bz_event_observer = { workspace = true }
bz_events = { workspace = true }
bz_external_cells = { workspace = true }
bz_fs = { workspace = true }
bz_hash = { workspace = true }
bz_interpreter_for_build = { workspace = true }
bz_query_impls = { workspace = true }
bz_server = { workspace = true }
bz_server_commands = { workspace = true }
bz_test = { workspace = true }
bz_test_runner = { workspace = true }
bz_transition = { workspace = true }
bz_util = { workspace = true }
bz_validation = { workspace = true }
bz_wrapper_common = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(unix)'.dependencies]
dirs = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }

bz_forkserver = { workspace = true }

[target.'cfg(windows)'.dependencies]
libc = { workspace = true }
mimalloc = { workspace = true }
windows-sys = { workspace = true }

[[bin]]
name = "bz"
path = "bin/bz.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(buck_build)", "cfg(client_only)", "cfg(fbcode_build)"] }
