load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/bz_action_impl",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "Action implementations and context functions",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "bz_action_impl",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "bz_action_impl",
    crate_name = "bz_action_impl",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/bz_action_metadata_proto:bz_action_metadata_proto",
        "//app/bz_analysis:bz_analysis",
        "//app/bz_artifact:bz_artifact",
        "//app/bz_build_api:bz_build_api",
        "//app/bz_build_signals:bz_build_signals",
        "//app/bz_common:bz_common",
        "//app/bz_core:bz_core",
        "//app/bz_data:bz_data",
        "//app/bz_directory:bz_directory",
        "//app/bz_error:bz_error",
        "//app/bz_events:bz_events",
        "//app/bz_execute:bz_execute",
        "//app/bz_file_watcher:bz_file_watcher",
        "//app/bz_fs:bz_fs",
        "//app/bz_http:bz_http",
        "//app/bz_interpreter:bz_interpreter",
        "//app/bz_node:bz_node",
        "//app/bz_util:bz_util",
        "//dice/dice:dice",
        "//dice/dice_futures:dice_futures",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//host_sharing:host_sharing",
        "//pagable:pagable",
        "//remote_execution/oss/re_grpc:remote_execution",
        "//shed/bz_hash:bz_hash",
        "//starlark-rust/starlark:starlark",
        "//starlark-rust/starlark_map:starlark_map",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
