[package]
description = "Action implementations and context functions"
edition = "2024"
license = { workspace = true }
name = "bz_action_impl"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
dupe = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
relative-path = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
tracing = { workspace = true }

allocative = { workspace = true }
dice = { workspace = true }
gazebo = { workspace = true }
pagable = { workspace = true }
sorted_vector_map = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }

bz_action_metadata_proto = { workspace = true }
bz_analysis = { workspace = true }
bz_artifact = { workspace = true }
bz_build_api = { workspace = true }
bz_build_signals = { workspace = true }
bz_common = { workspace = true }
bz_core = { workspace = true }
bz_data = { workspace = true }
bz_directory = { workspace = true }
bz_error = { workspace = true }
bz_events = { workspace = true }
bz_execute = { workspace = true }
bz_file_watcher = { workspace = true }
bz_fs = { workspace = true }
bz_hash = { workspace = true }
bz_http = { workspace = true }
bz_interpreter = { workspace = true }
bz_node = { workspace = true }
bz_util = { workspace = true }
dice_futures = { workspace = true }
host_sharing = { workspace = true }
remote_execution = { workspace = true }
