[package]
description = "Tests for bz_action_impl"
edition = "2024"
license = { workspace = true }
name = "bz_action_impl_tests"
repository = { workspace = true }
version = "0.1.0"

[dev-dependencies]
ctor = { workspace = true }
indoc = { workspace = true }
maplit = { workspace = true }

bz_error = { workspace = true }
dupe = { workspace = true }
starlark = { workspace = true }

bz_action_impl = { workspace = true }
bz_anon_target = { workspace = true }
bz_build_api = { workspace = true }
bz_core = { workspace = true }
bz_execute = { workspace = true }
bz_interpreter = { workspace = true }
bz_interpreter_for_build = { workspace = true }
bz_node = { workspace = true }
