[package]
description = "Execute rule function"
edition = "2024"
license = { workspace = true }
name = "bz_analysis"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
smallvec = { workspace = true }

allocative = { workspace = true }
dice = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
pagable = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }

bz_artifact = { workspace = true }
bz_build_api = { workspace = true }
bz_build_signals = { workspace = true }
bz_common = { workspace = true }
bz_configured = { workspace = true }
bz_core = { workspace = true }
bz_data = { workspace = true }
bz_error = { workspace = true }
bz_events = { workspace = true }
bz_execute = { workspace = true }
bz_hash = { workspace = true }
bz_interpreter = { workspace = true }
bz_node = { workspace = true }
bz_query = { workspace = true }
bz_util = { workspace = true }
