load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

COMMON_RUSTC_ENV = {
    "CARGO_MANIFEST_DIR": "app/bz_anon_target",
    "CARGO_PKG_AUTHORS": "",
    "CARGO_PKG_DESCRIPTION": "Anonymous targets",
    "CARGO_PKG_HOMEPAGE": "",
    "CARGO_PKG_LICENSE": "MIT OR Apache-2.0",
    "CARGO_PKG_LICENSE_FILE": "",
    "CARGO_PKG_NAME": "buck2_anon_target",
    "CARGO_PKG_README": "",
    "CARGO_PKG_REPOSITORY": "https://github.com/facebook/buck2",
    "CARGO_PKG_VERSION": "0.1.0",
    "CARGO_PKG_VERSION_MAJOR": "0",
    "CARGO_PKG_VERSION_MINOR": "1",
    "CARGO_PKG_VERSION_PATCH": "0",
    "CARGO_PKG_VERSION_PRE": "",
    }

rust_library(
    name = "buck2_anon_target",
    crate_name = "buck2_anon_target",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        "//allocative/allocative:allocative",
        "//app/bz_analysis:buck2_analysis",
        "//app/bz_artifact:buck2_artifact",
        "//app/bz_build_api:buck2_build_api",
        "//app/bz_build_signals:buck2_build_signals",
        "//app/bz_configured:buck2_configured",
        "//app/bz_core:buck2_core",
        "//app/bz_data:buck2_data",
        "//app/bz_error:buck2_error",
        "//app/bz_events:buck2_events",
        "//app/bz_execute:buck2_execute",
        "//app/bz_fs:buck2_fs",
        "//app/bz_interpreter:buck2_interpreter",
        "//app/bz_interpreter_for_build:buck2_interpreter_for_build",
        "//app/bz_node:buck2_node",
        "//app/bz_util:buck2_util",
        "//dice/dice:dice",
        "//dice/dice_futures:dice_futures",
        "//gazebo/cmp_any:cmp_any",
        "//gazebo/dupe:dupe",
        "//gazebo/gazebo:gazebo",
        "//gazebo/strong_hash:strong_hash",
        "//pagable:pagable",
        "//shed/buck2_hash:buck2_hash",
        "//starlark-rust/starlark:starlark",
        "//starlark-rust/starlark_map:starlark_map",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True) + [],
    rustc_env = COMMON_RUSTC_ENV,
    compile_data = glob([
        "**/*",
    ], allow_empty = True, exclude = [
        "BUILD.bazel",
        "BUCK",
        "Cargo.toml",
        "fuzz/**",
    ]),
)
